# rust-training

./: .project  Cargo.toml
src/: functions.rs  threads.rs
src/functions/: functions.rs
src/hello_world/: hello_world.rs
src/modules/: module3.rs  module_sample.rs  modules.rs
src/modules/module4/: mod.rs
